--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -184,7 +184,6 @@ extends:
 
             steps:
               - script: eng\common\CIBuild.cmd 
-                  -restore 
                   -pack 
                   -sign $(_SignArgs) 
                   -publish $(_PublishArgs) 
@@ -232,19 +231,19 @@ extends:
               #     & dotnet tool update microsoft.dotnet.darc --version "$darcVersion" --add-source "$arcadeServicesSource" --tool-path $(Agent.ToolsDirectory)\darc -v n
               #     & $(Agent.ToolsDirectory)\darc\darc add-build-to-channel --default-channels --id $(BARBuildId) --publishing-infra-version 3 --skip-assets-publishing --password $(MaestroAccessToken) --azdev-pat $(publishing-dnceng-devdiv-code-r-build-re)
 
-    - stage: PublishAssetRegistry
-      displayName: Publish to Build Asset Registry
-      dependsOn: pack_net
-      variables:
-      - template: /eng/common/templates-official/variables/pool-providers.yml@self
-      jobs:
-      # Publish to Build Asset Registry in order to generate the ReleaseConfigs artifact.
-      - template: /eng/common/templates-official/job/publish-build-assets.yml@self
-        parameters:
-          publishUsingPipelines: true
-          pool:
-            name: $(DncEngInternalBuildPool)
-            demands: ImageOverride -equals windows.vs2022preview.amd64
+    # - stage: PublishAssetRegistry
+    #   displayName: Publish to Build Asset Registry
+    #   dependsOn: pack_net
+    #   variables:
+    #   - template: /eng/common/templates-official/variables/pool-providers.yml@self
+    #   jobs:
+    #   # Publish to Build Asset Registry in order to generate the ReleaseConfigs artifact.
+    #   - template: /eng/common/templates-official/job/publish-build-assets.yml@self
+    #     parameters:
+    #       publishUsingPipelines: true
+    #       pool:
+    #         name: $(DncEngInternalBuildPool)
+    #         demands: ImageOverride -equals windows.vs2022preview.amd64
 
       # Publish and validation steps. Only run in official builds
     - template: /eng/common/templates-official/post-build/post-build.yml@self
