--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -183,7 +183,7 @@ extends:
                 clean: true
 
             steps:
-              - script: eng\common\CIBuild.cmd  -configuration $(_BuildConfig) $(_SignArgs) $(_PublishArgs) $(_OfficialBuildIdArgs)
+              - script: eng\common\CIBuild.cmd -configuration $(_BuildConfig) $(_SignArgs) $(_PublishArgs) $(_OfficialBuildIdArgs) -warnAsError 0
                 displayName: Build Test and Pack
               # - template: /eng/pipelines/common/pack.yml@self
               #   parameters:
