--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -34,8 +34,13 @@
   <ItemGroup>
     <FirstParty Include="Microsoft.Maui.dll" />
     <FirstParty Include="Microsoft.Maui.*.dll" />
-    <FirstParty Include="FormsViewGroup.dll" />
+    <FirstParty Include="Microsoft.Maui.Controls.SourceGen.dll" />
     <FirstParty Include="Microsoft.AspNetCore.Components.WebView.*.dll" />
+    <FirstParty Include="Microsoft.AspNetCore.Components.WebView.Maui.dll" />
+    <FirstParty Include="Microsoft.AspNetCore.Components.WebView.WindowsForms.dll" />
+    <FirstParty Include="Microsoft.AspNetCore.Components.WebView.Wpf.dll" />
+
+    <FirstParty Include="FormsViewGroup.dll" />
     <FirstParty Include="Microsoft.Extensions*.dll" />
     <FirstParty Include="System.CodeDom.dll" />
     <FirstParty Include="Microsoft.Bcl.AsyncInterfaces.dll" />
