--- a/src/Controls/src/Build.Tasks/nuget/buildTransitive/netstandard2.0/Microsoft.Maui.Controls.SingleProject.targets
+++ b/src/Controls/src/Build.Tasks/nuget/buildTransitive/netstandard2.0/Microsoft.Maui.Controls.SingleProject.targets
@@ -62,62 +62,21 @@
   </Target>
 
   <!--
-    Workaround for the issue where the resource starts with the Resources/ prefix,
+    TEMPORARY workaround for the issue where the resource starts with the Resources/ prefix,
     either in the Identity or Link metadata. The fix is to assume that was not intended
     since that is how it worked in 8.0.60 and earlier.
-    However, if there is a LogicalName metadata, we will skip processing as that is what
-    was explicitly set (even though the build will fail).
+    See: https://github.com/xamarin/xamarin-macios/issues/20968
   -->
-  <PropertyGroup>
-    <CollectBundleResourcesDependsOn Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios' or $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
-      _MauiRemoveResourcesPrefixFromBundleResource;
-      $(CollectBundleResourcesDependsOn);
-    </CollectBundleResourcesDependsOn>
-  </PropertyGroup>
-  <Target Name="_MauiRemoveResourcesPrefixFromBundleResource">
-    <!-- Collect the items into 2 categories: Link or no Link -->
-    <ItemGroup>
-      <_MauiBundleResourceWithLogicalName
-        Include="@(BundleResource->HasMetadata('LogicalName'))" />
-      <_MauiBundleResourceWithLink
-        Include="@(BundleResource->HasMetadata('Link'))"
-        Exclude="@(_MauiBundleResourceWithLogicalName)" />
-      <_MauiBundleResourceWithoutLink
-        Include="@(BundleResource)"
-        Exclude="@(_MauiBundleResourceWithLink);@(_MauiBundleResourceWithLogicalName)" />
-    </ItemGroup>
-    <!-- Set the LogicalName to be a path relative to Resources -->
-    <ItemGroup>
-      <_MauiBundleResourceWithRelativeLogicalName
-        Include="@(_MauiBundleResourceWithLink)"
-        Condition="@(_MauiBundleResourceWithLink->Count()) > 0"
-        LogicalName="$([MSBuild]::MakeRelative('$(MSBuildProjectDirectory)/Resources/', '$(MSBuildProjectDirectory)/%(Link)'))" />
-      <_MauiBundleResourceWithRelativeLogicalName
-        Include="@(_MauiBundleResourceWithoutLink)"
-        Condition="@(_MauiBundleResourceWithoutLink->Count()) > 0"
-        LogicalName="$([MSBuild]::MakeRelative('$(MSBuildProjectDirectory)/Resources/', '%(FullPath)'))" />
-    </ItemGroup>
-    <!-- Remove all items that are not below the Resources directory -->
-    <ItemGroup>
-      <_MauiBundleResourceWithCorrectLogicalName
-        Include="@(_MauiBundleResourceWithRelativeLogicalName)"
-        Condition="!$([System.String]::new('%(_MauiBundleResourceWithRelativeLogicalName.LogicalName)').StartsWith('..'))" />
-    </ItemGroup>
-    <!-- Replace the items in @(BundleResource) with the ones with a correct LogicalName -->
-    <ItemGroup>
-      <BundleResource Remove="@(_MauiBundleResourceWithCorrectLogicalName)" />
-      <BundleResource Include="@(_MauiBundleResourceWithCorrectLogicalName)" />
-    </ItemGroup>
-    <!-- Clean up items -->
-    <ItemGroup>
-      <_MauiBundleResourceResult Include="@(BundleResource)" />
-      <_MauiBundleResourceWithLogicalName Remove="@(_MauiBundleResourceWithLogicalName)" />
-      <_MauiBundleResourceWithLink Remove="@(_MauiBundleResourceWithLink)" />
-      <_MauiBundleResourceWithoutLink Remove="@(_MauiBundleResourceWithoutLink)" />
-      <_MauiBundleResourceWithRelativeLogicalName Remove="@(_MauiBundleResourceWithRelativeLogicalName)" />
-      <_MauiBundleResourceWithCorrectLogicalName Remove="@(_MauiBundleResourceWithCorrectLogicalName)" />
-      <_MauiBundleResourceResult Remove="@(_MauiBundleResourceResult)" />
-    </ItemGroup>
+  <Target Name="_MauiBefore_CollectBundleResources" BeforeTargets="_CollectBundleResources">
+    <PropertyGroup>
+      <_MauiOld_ResourcePrefix>$(_ResourcePrefix)</_MauiOld_ResourcePrefix>
+      <_ResourcePrefix>Resources;$(_ResourcePrefix)</_ResourcePrefix>
+    </PropertyGroup>
+  </Target>
+  <Target Name="_MauiAfter_CollectBundleResources" AfterTargets="_CollectBundleResources">
+    <PropertyGroup>
+      <_ResourcePrefix>$(_MauiOld_ResourcePrefix)</_ResourcePrefix>
+    </PropertyGroup>
   </Target>
 
   <!-- Import Maui Single Project property pages -->
