--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -300,14 +300,16 @@ stages:
   # - template: common/localization-handback.yml                    # Process incoming translations and Create PR to main [Localization Handback]
   # - template: common/merge-translations-update.yml                # Validating incoming translations strings and merge PR [Localization Handback]
 
-  - template: /eng/common/templates-official/job/onelocbuild.yml@self
-    # parameters:
-      # LclSource: lclFilesfromPackage
-      # LclPackageId: 'LCL-JUNO-PROD-XCSYNC'
-      # LclSource: lclFilesInRepo
-      # SkipLocProjectJsonGeneration: false
-      # MirrorRepo: ''
-      # MirrorBranch: main
+  - stage: Localization
+    jobs:
+      - template: /eng/common/templates-official/job/onelocbuild.yml@self
+        parameters:
+          # LclSource: lclFilesfromPackage
+          # LclPackageId: 'LCL-JUNO-PROD-XCSYNC'
+          LclSource: lclFilesInRepo
+          SkipLocProjectJsonGeneration: false
+          MirrorRepo: ''
+          MirrorBranch: main
       # SkipLocProjectJsonGeneration: true
       # MirrorRepo: xcsync
       # MirrorBranch: main
