--- a/eng/pipelines/maui-release-internal.yml
+++ b/eng/pipelines/maui-release-internal.yml
@@ -193,25 +193,34 @@ extends:
                 clean: true
 
             steps:
-              - pwsh: |
-                  if ($env:JAVA_HOME_11_X64) {
-                    $env:JAVA_HOME = $env:JAVA_HOME_11_X64
-                  } else {
-                    $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-11.*\bin\java.exe) | Select-Object -First 1
-                    if ($path -and (Test-Path $path)) {
-                      $env:JAVA_HOME = $path.Directory.Parent.FullName
-                    }
-                  }
-                  if ($env:JAVA_HOME) {
-                    echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
-                    echo "JAVA_HOME set to '$env:JAVA_HOME'"
-                  } else {
-                    echo "Unable to set JAVA_HOME"
-                  }
-                displayName: Set JAVA_HOME
+              - template: /eng/pipelines/templates/buildandtest.yml
+                parameters:
+                  dotnetScript: $(Build.SourcesDirectory)/build.cmd
+                  buildScript: $(_buildScript)
+                  buildConfig: $(_BuildConfig)
+                  repoArtifactsPath: $(Build.Arcade.ArtifactsPath)
+                  repoLogPath: $(Build.Arcade.LogsPath)
+                  repoTestResultsPath: $(Build.Arcade.TestResultsPath)
+                  isWindows: true
+              # - pwsh: |
+              #     if ($env:JAVA_HOME_11_X64) {
+              #       $env:JAVA_HOME = $env:JAVA_HOME_11_X64
+              #     } else {
+              #       $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-11.*\bin\java.exe) | Select-Object -First 1
+              #       if ($path -and (Test-Path $path)) {
+              #         $env:JAVA_HOME = $path.Directory.Parent.FullName
+              #       }
+              #     }
+              #     if ($env:JAVA_HOME) {
+              #       echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
+              #       echo "JAVA_HOME set to '$env:JAVA_HOME'"
+              #     } else {
+              #       echo "Unable to set JAVA_HOME"
+              #     }
+              #   displayName: Set JAVA_HOME
 
-              - script: eng\common\CIBuild.cmd -configuration $(_BuildConfig) $(_SignArgs) $(_PublishArgs) $(_OfficialBuildIdArgs) -warnAsError 0
-                displayName: Build Test and Pack
+              # - script: $(_buildScript) -configuration $(_BuildConfig) $(_SignArgs) $(_PublishArgs) $(_OfficialBuildIdArgs) -warnAsError 0
+              #   displayName: Build Test and Pack
               # - template: /eng/pipelines/common/pack.yml@self
               #   parameters:
               #     publishArtifacts: false
